# PhysSplatLab

./: .gitignore  .gitmodules  Makefile  README.md  install.sh  pyproject.toml
physsplatlab/: __init__.py  gsplat_manager.py  gsplat_renderer.py
physsplatlab/utils/: camera_view_utils.py  render_utils.py  transformation_utils.py
scripts/: gs_load_cam.py  render_rotating_video.py  test.py
